<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".view.LoginActivity" android:background="#FFFFFF">

    <ImageView
            android:id="@+id/gambar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            tools:ignore="ContentDescription"
            app:srcCompat="@drawable/madres_logo_transparent_red" android:layout_marginBottom="16dp"/>

    <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:drawableStart="@drawable/users"
            android:hint="@string/inputNama"
            android:inputType="textPersonName"
            android:maxLength="20"
            tools:ignore="Autofill"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/no_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/noid"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <com.santalu.widget.MaskEditText
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/inputNomor"
                android:inputType="phone"
                app:met_mask="###-####-####"/>

    </LinearLayout>

    <Button
            android:id="@+id/invite"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_hover"
            android:elevation="4dp"
            android:text="@string/txtLogin"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:targetApi="lollipop"/>

</LinearLayout>