<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".view.VerifyActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:elevation="5dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Verifikasi"
                tools:targetApi="lollipop" />

    </android.support.design.widget.AppBarLayout>

    <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/notify1"
            android:textSize="16sp" />

    <TextView
            android:id="@+id/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/noid"
            android:textSize="16sp"
            android:textStyle="bold" />

    <EditText
            android:id="@+id/vertify_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/kodeVer"
            android:inputType="phone"
            android:maxLength="6"
            tools:ignore="Autofill"/>

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:orientation="horizontal">

        <Button
                android:id="@+id/verify"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_hover"
                android:elevation="4dp"
                android:text="@string/verifikasi"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible"
                tools:targetApi="lollipop" />

        <Button
                android:id="@+id/resend_code"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_hover"
                android:elevation="4dp"
                android:text="Kirim Ulang"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="visible"
                tools:ignore="HardcodedText,RtlHardcoded"
                tools:targetApi="lollipop" />
    </LinearLayout>

    <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" />

    <TextView
            android:id="@+id/progmsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtProgressVer"
            android:textSize="16sp"/>

</LinearLayout>